--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="resume-container">
         <!-- Personal Info -->
         <div class="personal-info">
-            <img src="./img/4d134b0.jpg" alt="Profile Picture" class="profile-pic">
+            <img src="./img/my profile1.jpg" alt="Profile Picture" class="profile-pic">
             <div class="contact-info">
                 <h1 id="name"><u>Muhammad Fahad Khakwani</u></h1>
                 <p id="contact"><b>Email :</b> fahadyousufkhakwani@gmail.com | Mobile : <b>0092-312-9092620</b></p>
